# WORKMATE

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/devperf/: app.py  cli.py  models.py  readers.py
src/devperf/reports/: base.py  performance.py
tests/test_reports/: test__perfomance.py
